--- a/PaginaUHeroe/index.html
+++ b/PaginaUHeroe/index.html
@@ -8,6 +8,14 @@
     <title>U-HEROE</title>
 </head>
 <body>
+
+    <div id="img">
+
+        <img src="https://i.postimg.cc/85NJRbFZ/logo-UHeroe.png">
+
+    </div>
+
+
     <div class="wrapper">
         <div class="title">
            Datos de la<br>
