--- a/PaginaUHeroe/index.html
+++ b/PaginaUHeroe/index.html
@@ -39,7 +39,7 @@
             </div>
             <br>
             <div class="field">
-                <input type="submit" value="Calcular" onclick="calcular()">
+                <a href="#" id="botonCalcular" onclick="calcular()">Calcular</a>
             </div>
             <br>
             <div id="resultado">
